--- a/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
+++ b/src/app/pages/user-management/wholesaler/edit/wholesaler-edit.component.html
@@ -233,28 +233,28 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="Area" formControlName="area"
+              <mat-select placeholder="{{ ls.locale.global.area.area }}" formControlName="area"
                 matTooltip="{{getToolTipData(formWs.get('area').value, list['area'])}}"
                 (selectionChange)="getAudienceArea('salespoint', formWs.get('area').value)">
                 <mat-option *ngFor="let item of list['area']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
               <mat-error *ngIf="formWs.controls['area'].hasError('required') && formWs.controls['area'].touched">
-                Area {{ ls.locale.global.messages.mandatory_text }}
+                {{ ls.locale.global.area.area }} {{ ls.locale.global.messages.mandatory_text }}
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="Salespoint" formControlName="salespoint"
+              <mat-select placeholder="{{ ls.locale.global.area.salespoint }}" formControlName="salespoint"
                 matTooltip="{{getToolTipData(formWs.get('salespoint').value, list['salespoint'])}}"
                 (selectionChange)="getAudienceArea('district', formWs.get('salespoint').value)">
                 <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
               <mat-error
                 *ngIf="formWs.controls['salespoint'].hasError('required') && formWs.controls['salespoint'].touched">
-                Salespoint {{ ls.locale.global.messages.mandatory_text }}
+                {{ ls.locale.global.area.salespoint }} {{ ls.locale.global.messages.mandatory_text }}
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="District" formControlName="district"
+              <mat-select placeholder="{{ ls.locale.global.area.district }}" formControlName="district"
                 matTooltip="{{getToolTipData(formWs.get('district').value, list['district'])}}"
                 (selectionChange)="getAudienceArea('territory', formWs.get('district').value)">
                 <mat-option *ngFor="let item of list['district']" [value]="item.id">{{item.name}}</mat-option>
@@ -265,7 +265,7 @@
               </mat-error>
             </mat-form-field>
             <mat-form-field fxFlex="31%" class="is-light form-primary">
-              <mat-select placeholder="Territory" formControlName="territory"
+              <mat-select placeholder="{{ ls.locale.global.area.territory }}" formControlName="territory"
                 matTooltip="{{getToolTipData(formWs.get('territory').value, list['territory'])}}">
                 <mat-option *ngFor="let item of list['territory']" [value]="item.id">{{item.name}}</mat-option>
               </mat-select>
