--- a/src/app/pages/dte/template/index/template-index.component.html
+++ b/src/app/pages/dte/template/index/template-index.component.html
@@ -108,6 +108,11 @@
               prop="task_toolbox_categories_name"></ngx-datatable-column>
             <ngx-datatable-column [width]="100" name="Project Misi" headerClass="textright"
               prop="task_toolbox_project_name"></ngx-datatable-column>
+              <ngx-datatable-column name="Negara" [width]="100" prop="name">
+                <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
+                  <span class="row-country" (click)="directDetail(row)">{{row.country}}</span>
+                </ng-template>
+              </ngx-datatable-column>
             <ngx-datatable-column [width]="80" name="Tindakan" headerClass="textright" [sortable]="false">
               <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
                 <div class="button-row" style="margin-left: -10px">
