--- a/src/app/pages/popup-notification/import-pop-up-audience/import-pop-up-audience.component.html
+++ b/src/app/pages/popup-notification/import-pop-up-audience/import-pop-up-audience.component.html
@@ -41,10 +41,11 @@
             <th nowrap>Kode</th>
             <th nowrap>Owner</th>
             <th nowrap>Tipe</th>
+            <th nowrap>Alasan Tidak Valid</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of rows">
+          <tr *ngFor="let item of rows" [ngStyle]="{'background' : item.is_valid ? '#fff' : '#df5d52'}">
             <td nowrap>
               {{ item.id }}
             </td>
@@ -59,6 +60,9 @@
             </td>
             <td nowrap>
               {{ item.type }}
+            </td>
+            <td nowrap>
+              {{ item.reason }}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
@@ -119,7 +123,7 @@
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
         fxLayoutGap.lt-md="10px" fxFlex="1 0 auto">
         <button type="button" mat-raised-button color="primary" (click)="submit()"
-          [disabled]="rows.length === 0">Kirim</button>
+        [disabled]="isValid == false">Kirim</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
           [disabled]="uploading">Batal</button>
       </div>
