ADD: disabling input at b2c voucher

--- a/src/app/pages/b2c-voucher/edit/tab/design-voucher/design-voucher.component.scss
+++ b/src/app/pages/b2c-voucher/edit/tab/design-voucher/design-voucher.component.scss
@@ -22,6 +22,17 @@
     }
   }
 
+  .banner-image-template-disabled {
+    height: 210px;
+    width: 410px;
+    border-radius: 6px;
+    background-color: #ffffff;
+    border: 2px solid white;
+    box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.35);
+    cursor: default;
+    opacity: 0.5;
+  }
+
   .banner-image-template-selected {
     height: 210px;
     width: 410px;
