--- a/src/app/pages/b2c-voucher/edit/b2c-voucher-edit.component.html
+++ b/src/app/pages/b2c-voucher/edit/b2c-voucher-edit.component.html
@@ -167,7 +167,7 @@
               <h4 class="ml-24 p-8" style="font-weight: bold;">Penggunaan Voucher</h4>
               <div fxLayout="row wrap" fxLayoutGap="20px" class="top-table p-8 ml-24">
                 <div fxFlex="60" fxLayoutGap="20px">
-                  <mat-checkbox *ngFor="let item of usage" [value]="item.value" [checked]="formDetailVoucher.controls['usage'].value.indexOf(item.value) >= 0" (change)="onUsageChange($event)">{{item.label}}</mat-checkbox>
+                  <mat-checkbox *ngFor="let item of usage" [value]="item.value" [checked]="formDetailVoucher.controls['usage'].value.indexOf(item.value) >= 0" (change)="onUsageChange($event)" [disabled]="disableForm">{{item.label}}</mat-checkbox>
                   <mat-error *ngIf="formDetailVoucher.controls['usage'].errors?.required" class="pt-20">
                     Penggunaan Voucher harus dipilih
                   </mat-error>
@@ -176,7 +176,7 @@
               <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center"
                 *ngIf="!isDetail && detailVoucher?.is_enable_detail_voucher">
                 <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
-                  (click)="onSaveDetail()">
+                  (click)="onSaveDetail()" [disabled]="disableForm">
                   SIMPAN
                 </button>
               </div>
