--- a/src/app/pages/b2c-voucher/edit/tab/design-voucher/design-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/design-voucher/design-voucher.component.html
@@ -2,7 +2,7 @@
 <div class="ayo-middle p-24" #containerScroll fxLayout="column">
   <div>
     <div fxLayout="row" class="pb-24 px-12">
-      <mat-checkbox class="mt-4 ml-4 mb-8"
+      <mat-checkbox class="mt-4 ml-4 mb-8" [disabled]="disableForm"
         [formControl]="isPushNearbyPromotion">
         Push Nearby Promotion</mat-checkbox>
     </div>
@@ -17,7 +17,7 @@
         <div fxFlex="45" class="pb-24" *ngFor="let item of templateBannerList">
           <span>{{item.name}}</span>
           <div
-            [ngClass]="{'selected-banner': bannerSelected?.id === item.id, 'banner-image-template' : bannerSelected?.id !== item.id }"
+            [ngClass]="{'selected-banner': bannerSelected?.id === item.id, 'banner-image-template' : bannerSelected?.id !== item.id && !disableForm, 'banner-image-template-disabled': disableForm }"
             (click)="selectBannerTemplate(item)">
             <div [class]="'banner-image-custom ' + item.class" [title]="item.name"
               [style.background-image]="'url(' + item.image + ')'">
@@ -81,8 +81,8 @@
         <div class="" fxLayout="row" fxLayoutAlign="start center">
           <h3 class="">Isi Halaman</h3>
         </div>
-        <textarea *ngIf="!isDetail && detailVoucher?.is_enable_design" [froalaEditor]="options" formControlName="body" class="pb-4" fxFlex="100"></textarea>
-        <textarea matInput *ngIf="isDetail" formControlName="body" class="pb-4" fxFlex="100"></textarea>
+        <textarea *ngIf="!isDetail && detailVoucher?.is_enable_design" [froalaEditor]="options" (froalaInit)="initialize($event)" formControlName="body" class="pb-4" fxFlex="100"></textarea>
+        <textarea matInput *ngIf="isDetail" formControlName="body" class="pb-4" fxFlex="100" [disabled]="disableForm"></textarea>
         <mat-error style="padding-top: 6px !important; font-size: .86em;"
           *ngIf="formDesignVoucher.controls['body'].hasError('required') && formDesignVoucher.controls['body'].touched">
           Isi Halaman harus diisi
@@ -93,7 +93,7 @@
 
     <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail && detailVoucher?.is_enable_design">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
-        (click)="onUpdate()">
+        (click)="onUpdate()" [disabled]="disableForm">
         SIMPAN
       </button>
     </div>
