--- a/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-consumer/panel-consumer-voucher.component.html
@@ -5,7 +5,7 @@
   <div class="ayo-middle p-24">
     <div fxLayout="row" class="pb-24 px-12" *ngIf="!formConsumerGroup.get('isTargetAudience').value">
       <mat-checkbox class="mt-4 ml-4 mb-8" (change)="isChangeVoucherAutomation($event)"
-        [formControl]="isVoucherAutomation" [disabled]="!detailVoucher?.is_enable_panel_customer">
+        [formControl]="isVoucherAutomation" [disabled]="!detailVoucher?.is_enable_panel_customer || disableForm">
         Voucher Automation</mat-checkbox>
     </div>
 
@@ -192,17 +192,17 @@
                 <h3 class="">&nbsp;</h3>
               </div>
               <div *ngIf="!isDetail && detailVoucher?.is_enable_panel_customer" fxFlex="50" fxLayout="row wrap" fxLayoutAlign="end center" fxLayout.lt-md="column" fxLayoutGap="10px" fxLayoutGap.lt-md="0px">
-                <button *ngIf="formConsumerGroup.get('areas').value.length === 1 || i === (formConsumerGroup.get('areas').value.length - 1)" mat-raised-button type="button" (click)="addArea()">
+                <button *ngIf="formConsumerGroup.get('areas').value.length === 1 || i === (formConsumerGroup.get('areas').value.length - 1)" mat-raised-button type="button" (click)="addArea()" [disabled]="disableForm">
                   <mat-icon>add</mat-icon>
                 </button>
-                <button *ngIf="formConsumerGroup.get('areas').value.length > 1" mat-raised-button color="primary" type="button" (click)="deleteArea(i)">
+                <button *ngIf="formConsumerGroup.get('areas').value.length > 1" mat-raised-button color="primary" type="button" (click)="deleteArea(i)" [disabled]="disableForm">
                   <mat-icon>delete</mat-icon>
                 </button>
               </div>
             </div>
             <div class="pb-8 px-24" fxLayout="row wrap" fxLayout.lt-md="column" fxLayoutGap="20px" fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch" *ngIf="detailVoucher?.is_enable_panel_customer">
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="National" formControlName="national">
+                <mat-select placeholder="National" formControlName="national" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_national'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -212,7 +212,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="generateList('region', wil.get('zone').value, i, 'selection')">
+                <mat-select placeholder="Zone" formControlName="zone" (selectionChange)="generateList('region', wil.get('zone').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_zone'].value" [value]="item.id">{{item.name}}
                   </mat-option>
                 </mat-select>
@@ -221,7 +221,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Regional" formControlName="region" (selectionChange)="generateList('area', wil.get('region').value, i, 'selection')">
+                <mat-select placeholder="Regional" formControlName="region" (selectionChange)="generateList('area', wil.get('region').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_region'].value" [value]="item.id">{{item.name}}
                   </mat-option>
                 </mat-select>
@@ -230,7 +230,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Area" formControlName="area" (selectionChange)="generateList('salespoint', wil.get('area').value, i, 'selection')">
+                <mat-select placeholder="Area" formControlName="area" (selectionChange)="generateList('salespoint', wil.get('area').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_area'].value" [value]="item.id">{{item.name}}
                   </mat-option>
                 </mat-select>
@@ -239,7 +239,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="generateList('district', wil.get('salespoint').value, i, 'selection')">
+                <mat-select placeholder="Salespoint" formControlName="salespoint" (selectionChange)="generateList('district', wil.get('salespoint').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_salespoint'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -249,7 +249,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="District" formControlName="district" (selectionChange)="generateList('territory', wil.get('district').value, i, 'selection')">
+                <mat-select placeholder="District" formControlName="district" (selectionChange)="generateList('territory', wil.get('district').value, i, 'selection')" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_district'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -259,7 +259,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
-                <mat-select placeholder="Territory" formControlName="territory">
+                <mat-select placeholder="Territory" formControlName="territory" [disabled]="disableForm">
                   <mat-option *ngFor="let item of wil.controls['list_territory'].value" [value]="item.id">
                     {{item.name}}
                   </mat-option>
@@ -418,7 +418,7 @@
 
     <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail && detailVoucher?.is_enable_panel_customer">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
-        (click)="onSave()">
+        (click)="onSave()" [disabled]="disableForm">
         {{ ls.locale.global.button.save }}
       </button>
     </div>
