--- a/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/panel-retailer/panel-retailer-voucher.component.html
@@ -5,7 +5,7 @@
   <div class="ayo-middle p-24">
     <div fxLayout="row" class="pb-24 px-12">
       <mat-checkbox class="mt-4 ml-4 mb-8" (change)="isChangeTargetAudience($event)"
-        [formControl]="isTargetAudience" [disabled]="!detailVoucher?.is_enable_panel_retailer">
+        [formControl]="isTargetAudience" [disabled]="!detailVoucher?.is_enable_panel_retailer || disableForm">
         Target Audience</mat-checkbox>
     </div>
 
@@ -215,7 +215,7 @@
     </div>
     <div class="confirm p-24" fxLayout="row" fxLayoutAlign="center center" *ngIf="!isDetail && detailVoucher?.is_enable_panel_retailer">
       <button mat-raised-button type="button" class="confirmation-button" fxFlex="30" fxFlex.gt-xs="20"
-        (click)="onSave()">
+        (click)="onSave()" [disabled]="disableForm">
         SIMPAN
       </button>
     </div>
