--- a/src/app/pages/b2c-voucher/edit/tab/penukaran-voucher/penukaran-voucher.component.html
+++ b/src/app/pages/b2c-voucher/edit/tab/penukaran-voucher/penukaran-voucher.component.html
@@ -75,7 +75,7 @@
                 <span class="nominal-label">Nominal Penukaran (Rupiah)</span>
                 <div formArrayName="transferBankArray" *ngFor="let item of formPenukaranVoucher.get('transferBankArray')['controls']; let i = index;">
                   <div [formGroupName]="i">
-                    <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="isCheck">
+                    <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="isCheck" [disabled]="disableForm">
                       {{item.get('nominal').value | rupiahFormaterWithoutRp}}
                     </mat-checkbox>
                   </div>
@@ -83,7 +83,7 @@
                 <mat-form-field class="is-light">
                   <input matInput type="number" placeholder="Tambahkan Opsi" formControlName="tambahTransferBank">
                 </mat-form-field>
-                <button mat-icon-button (click)="addNominal('transfer-bank')">
+                <button mat-icon-button (click)="addNominal('transfer-bank')" [disabled]="disableForm">
                   <mat-icon class="secondary-text">add</mat-icon>
                 </button>
               </div>
@@ -100,7 +100,7 @@
                 <span class="nominal-label">Nominal Penukaran (Rupiah)</span>
                 <div formArrayName="saldoPojokBayarArray" *ngFor="let item of formPenukaranVoucher.get('saldoPojokBayarArray')['controls']; let i = index;">
                   <div [formGroupName]="i">
-                    <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="isCheck">
+                    <mat-checkbox class="mt-4 ml-4 mb-8" formControlName="isCheck" [disabled]="disableForm">
                       {{item.get('nominal').value | rupiahFormaterWithoutRp}}
                     </mat-checkbox>
                   </div>
@@ -108,7 +108,7 @@
                 <mat-form-field class="is-light">
                   <input matInput type="number" placeholder="Tambahkan Opsi" formControlName="tambahSaldoPojokBayar">
                 </mat-form-field>
-                <button mat-icon-button (click)="addNominal('pojok-bayar')">
+                <button mat-icon-button (click)="addNominal('pojok-bayar')" [disabled]="disableForm">
                   <mat-icon class="secondary-text">add</mat-icon>
                 </button>
               </div>
